terraform/modules/privates_subnets.tf
resource "aws_subnet" "private" {
  count             = length(var.private_subnet_cidrs)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = merge(
    var.tags,
    {
      Name = format("private-subnet-%s", var.private_subnet_cidrs[count.index])
    }
  )
}
